--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,4 +1,9 @@
-<% @characters.each do |c| %>
-	<%= link_to c.name, character_path(c) %>
-	<%= c.brief %>
-<% end %>
+<ul>
+	<% @characters.each do |c| %>
+		<li>
+			<%= link_to c.name, character_path(c) %>
+			<%= c.brief %>
+			<%= link_to 'perspectives', character_perspectives_path(c) %>
+		</li>
+	<% end %>
+</ul>
