--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+	background-color: rgba(13, 43, 13, 0.88);
+}
+
+.main-content {
+	width: 980px;
+	margin: 30px auto;
+	min-height: 600px;
+	background-color: #fffad8;
+	border-radius: 7px;
+	padding: 30px;
+}
