--- a/app/views/cells/_prompt.html.erb
+++ b/app/views/cells/_prompt.html.erb
@@ -1,4 +1,5 @@
 <div>
 	<%= content %>
-	<%= link_to 'Answer', prompt.answer_url %>
+	<%= link_to '回应', prompt.answer_url %>
+	<%= link_to '无关联', '#' %>
 </div>
