--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
         <%= link_to '角色', characters_path %>
         <%= link_to '概念', concepts_path %>
         <%= link_to '情节', plots_path %>
+        <%= link_to '世界', worlds_path %>
       </header>
       <%= yield %>
     </div>
