add world constraints

--- a/app/views/characters/_prompts.html.erb
+++ b/app/views/characters/_prompts.html.erb
@@ -1,5 +1,5 @@
 <section>
-	<% @prompts.each do |p| %>
-		<%= render_prompt p %>
-	<% end %>
+	<%# @prompts.each do |p| %>
+		<%#= render_prompt p %>
+	<%# end %>
 </section>
