--- a/app/views/concepts/show.html.erb
+++ b/app/views/concepts/show.html.erb
@@ -1,4 +1,4 @@
 <%= @concept.name %>
 <%= @concept.description %>
 
-<%= link_to 'Edit', edit_concept_path(@concept) %>
+<%= link_to 'Edit', edit_world_concept_path(@world, @concept) %>
