--- a/app/views/characters/_character_form.html.erb
+++ b/app/views/characters/_character_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @character do |f| %>
+<%= form_for [@world, @character] do |f| %>
 	<div>
 		<%= f.label :name %>:
 		<%= f.text_field :name %>
