--- a/app/views/concepts/_concept_form.html.erb
+++ b/app/views/concepts/_concept_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @concept do |f| %>
+<%= form_for [@world, @concept] do |f| %>
 	<div>
 		<%= f.label :name %>:
 		<%= f.text_field :name %>
