--- a/app/views/concepts/index.html.erb
+++ b/app/views/concepts/index.html.erb
@@ -1,9 +1,9 @@
 <ul>
 	<% @concepts.each do |concept| %>
 		<li>
-			<%= link_to concept.name, concept_path(concept) %>
+			<%= link_to concept.name, world_concept_path(@world, concept) %>
 		</li>
 	<% end %>
 </ul>
 
-<%= link_to 'New', new_concept_path %>
+<%= link_to 'New', new_world_concept_path(@world) %>
