--- a/app/views/plots/_plot_form.html.erb
+++ b/app/views/plots/_plot_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @plot do |f| %>
+<%= form_for [@world, @plot] do |f| %>
   <div>
     <%= f.label :name %>:
     <%= f.text_field :name %>
